--- a/index.html
+++ b/index.html
@@ -1,1 +1,56 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>UI Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+    <!-- Statistics Section -->
+    <section class="stats">
+        <div>135<br>Finished Projects</div>
+        <div>225<br>Working Hours</div>
+        <div>115<br>Online Support</div>
+        <div>272<br>Happy Customers</div>
+    </section>
+
+    <!-- Success Work Section -->
+    <section class="success-work">
+        <h2>My Success Work</h2>
+        <div class="gallery">
+            <img src="image1.jpg" alt="Work 1">
+            <img src="image2.jpg" alt="Work 2">
+            <img src="image3.jpg" alt="Work 3">
+            <img src="image4.jpg" alt="Work 4">
+            <img src="image5.jpg" alt="Work 5">
+            <img src="image6.jpg" alt="Work 6">
+        </div>
+    </section>
+
+    <!-- Certifications -->
+    <section class="certifications">
+        <img src="badge1.png" alt="Badge 1">
+        <img src="badge2.png" alt="Badge 2">
+        <img src="badge3.png" alt="Badge 3">
+        <img src="badge4.png" alt="Badge 4">
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <div class="footer-content">
+            <h3>UI Portfolio</h3>
+            <p>+12 345 678 910 | info@example.com | 208 Avenue Street, UK - 62617</p>
+            <div class="social-icons">
+                <!-- You can put social media icons here later -->
+            </div>
+        </div>
+        <p class="copyright">
+            © 2022 UI Portfolio. All Rights Reserved
+        </p>
+    </footer>
+
+</body>
+</html>
