--- a/index.html
+++ b/index.html
@@ -2,55 +2,76 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UI Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Joyce Nyambura - Software Developer</title>
+  <link rel="stylesheet" href="css/style.css">
+  <script defer src="js/main.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
-    <!-- Statistics Section -->
-    <section class="stats">
-        <div>135<br>Finished Projects</div>
-        <div>225<br>Working Hours</div>
-        <div>115<br>Online Support</div>
-        <div>272<br>Happy Customers</div>
-    </section>
+  <!-- Landing Section -->
+  <section class="landing" id="home">
+    <div class="intro fade-in">
+      <h1>Hello, I'm <span>Joyce Nyambura</span></h1>
+      <h2>Software Developer</h2>
+      <a href="#contact" class="btn">Hire Me</a>
+    </div>
+  </section>
 
-    <!-- Success Work Section -->
-    <section class="success-work">
-        <h2>My Success Work</h2>
-        <div class="gallery">
-            <img src="image1.jpg" alt="Work 1">
-            <img src="image2.jpg" alt="Work 2">
-            <img src="image3.jpg" alt="Work 3">
-            <img src="image4.jpg" alt="Work 4">
-            <img src="image5.jpg" alt="Work 5">
-            <img src="image6.jpg" alt="Work 6">
-        </div>
-    </section>
+  <!-- About Me -->
+  <section class="about fade-in" id="about">
+    <h2>About Me</h2>
+    <p>I'm Joyce Nyambura, a passionate Software Developer dedicated to building elegant, efficient, and user-friendly digital solutions. I love turning ideas into reality through coding and creativity. Let's work together and bring visions to life!</p>
+  </section>
 
-    <!-- Certifications -->
-    <section class="certifications">
-        <img src="badge1.png" alt="Badge 1">
-        <img src="badge2.png" alt="Badge 2">
-        <img src="badge3.png" alt="Badge 3">
-        <img src="badge4.png" alt="Badge 4">
-    </section>
+  <!-- Skills -->
+  <section class="skills fade-in" id="skills">
+    <h2>Skills</h2>
+    <div class="skills-container">
+      <div class="skill-item">HTML5</div>
+      <div class="skill-item">CSS3</div>
+      <div class="skill-item">JavaScript</div>
+      <div class="skill-item">Git & GitHub</div>
+      <div class="skill-item">Responsive Design</div>
+    </div>
+  </section>
 
-    <!-- Footer -->
-    <footer>
-        <div class="footer-content">
-            <h3>UI Portfolio</h3>
-            <p>+12 345 678 910 | info@example.com | 208 Avenue Street, UK - 62617</p>
-            <div class="social-icons">
-                <!-- You can put social media icons here later -->
-            </div>
-        </div>
-        <p class="copyright">
-            © 2022 UI Portfolio. All Rights Reserved
-        </p>
-    </footer>
+  <!-- Portfolio -->
+  <section class="portfolio fade-in" id="portfolio">
+    <h2>Portfolio</h2>
+    <div class="portfolio-container">
+      <div class="portfolio-item">
+        <h3>Project One</h3>
+        <p>Coming Soon...</p>
+      </div>
+      <div class="portfolio-item">
+        <h3>Project Two</h3>
+        <p>Coming Soon...</p>
+      </div>
+      <div class="portfolio-item">
+        <h3>Project Three</h3>
+        <p>Coming Soon...</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact -->
+  <section class="contact fade-in" id="contact">
+    <h2>Contact Me</h2>
+    <form action="https://formspree.io/f/{your-form-id}" method="POST">
+      <input type="text" name="name" placeholder="Your Name" required>
+      <input type="email" name="email" placeholder="Your Email" required>
+      <textarea name="message" placeholder="Your Message" required></textarea>
+      <button type="submit" class="btn">Send Message</button>
+    </form>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>© 2025 Joyce Nyambura. All rights reserved.</p>
+  </footer>
 
 </body>
 </html>
